--- a/Glassbox/en.lproj/MainStoryboard.storyboard
+++ b/Glassbox/en.lproj/MainStoryboard.storyboard
@@ -1,26 +1,193 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2840" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="gyI-Xf-4xs">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1926"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
-        <scene sceneID="5">
+        <!--Glassbox View Controller-->
+        <scene sceneID="L6g-P5-y3i">
             <objects>
-                <viewController id="2" customClass="GlassboxViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="3">
+                <viewController id="oXg-ZW-hWr" customClass="GlassboxViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="DOr-62-H50">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TFM-Im-6vs">
+                                <subviews>
+                                    <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p6V-rQ-2OE">
+                                        <items>
+                                            <navigationItem title="Notifications" id="46K-kh-kvT"/>
+                                        </items>
+                                    </navigationBar>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="MgW-DQ-Ce2">
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="p6V-rQ-2OE" firstAttribute="trailing" secondItem="TFM-Im-6vs" secondAttribute="trailing" type="default" id="0zh-dQ-fdu"/>
+                                    <constraint firstItem="p6V-rQ-2OE" firstAttribute="top" secondItem="TFM-Im-6vs" secondAttribute="top" type="default" id="Irl-GB-Om3"/>
+                                    <constraint firstItem="MgW-DQ-Ce2" firstAttribute="bottom" secondItem="TFM-Im-6vs" secondAttribute="bottom" type="default" id="OZk-TZ-3wK"/>
+                                    <constraint firstItem="p6V-rQ-2OE" firstAttribute="leading" secondItem="TFM-Im-6vs" secondAttribute="leading" type="default" id="kz0-qN-Alb"/>
+                                    <constraint firstItem="MgW-DQ-Ce2" firstAttribute="trailing" secondItem="TFM-Im-6vs" secondAttribute="trailing" type="default" id="qPq-hq-0z5"/>
+                                    <constraint firstItem="MgW-DQ-Ce2" firstAttribute="top" secondItem="p6V-rQ-2OE" secondAttribute="bottom" type="default" id="qaH-lR-scO"/>
+                                    <constraint firstItem="MgW-DQ-Ce2" firstAttribute="leading" secondItem="TFM-Im-6vs" secondAttribute="leading" type="default" id="rPl-xI-XrG"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="TFM-Im-6vs" firstAttribute="top" secondItem="DOr-62-H50" secondAttribute="top" type="default" id="85n-4E-Uap"/>
+                            <constraint firstItem="TFM-Im-6vs" firstAttribute="leading" secondItem="DOr-62-H50" secondAttribute="leading" type="default" id="B1a-7a-G4G"/>
+                            <constraint firstAttribute="trailing" secondItem="TFM-Im-6vs" secondAttribute="trailing" constant="80" id="QTd-RP-0OP"/>
+                            <constraint firstItem="TFM-Im-6vs" firstAttribute="bottom" secondItem="DOr-62-H50" secondAttribute="bottom" type="default" id="lb0-Fi-Nu6"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="KrJ-0t-Aa2"/>
+                    <connections>
+                        <outlet property="tableView" destination="MgW-DQ-Ce2" id="YJf-eo-sbw"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qPk-Mq-ArN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="384" y="-540"/>
+        </scene>
+        <!--Glassbox Table View Controller - Notifications-->
+        <scene sceneID="RyS-gb-joN">
+            <objects>
+                <tableViewController id="yYq-rP-agJ" customClass="GlassboxTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="60" sectionHeaderHeight="22" sectionFooterHeight="22" id="9aJ-bE-pog">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="New Cell" rowHeight="60" id="ieU-jf-2MQ" customClass="GlassboxCell">
+                                <rect key="frame" x="0.0" y="22" width="320" height="60"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="59"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" tag="4" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ok1-S7-d52">
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="60" id="0GJ-bC-CfD"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="left" text="NAME" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dCt-fW-ocE">
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="173" id="2cp-Zg-6He"/>
+                                                <constraint firstAttribute="height" constant="21" id="5F4-ic-XD6"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </label>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="left" text="ACTION" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="173" translatesAutoresizingMaskIntoConstraints="NO" id="BnD-tb-3F7">
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="aeT-os-df0"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </label>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="3" contentMode="left" text="TIME" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nEy-WF-Mdx">
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="8h1-Zl-pkV"/>
+                                                <constraint firstAttribute="width" constant="152" id="W16-7T-6GQ"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <color key="textColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="BnD-tb-3F7" firstAttribute="leading" secondItem="Ok1-S7-d52" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="34b-Zv-TKE"/>
+                                    <constraint firstItem="Ok1-S7-d52" firstAttribute="leading" secondItem="ieU-jf-2MQ" secondAttribute="leading" type="default" id="3y3-RQ-jYv"/>
+                                    <constraint firstItem="dCt-fW-ocE" firstAttribute="top" secondItem="ieU-jf-2MQ" secondAttribute="top" constant="9" id="A39-He-8hg"/>
+                                    <constraint firstItem="Ok1-S7-d52" firstAttribute="top" secondItem="ieU-jf-2MQ" secondAttribute="top" type="default" id="Bbq-wF-OOs"/>
+                                    <constraint firstAttribute="trailing" secondItem="nEy-WF-Mdx" secondAttribute="trailing" constant="20" type="default" id="Q2d-RN-17y"/>
+                                    <constraint firstItem="BnD-tb-3F7" firstAttribute="top" secondItem="nEy-WF-Mdx" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="R5Y-g1-bdT"/>
+                                    <constraint firstItem="Ok1-S7-d52" firstAttribute="centerY" secondItem="ieU-jf-2MQ" secondAttribute="centerY" type="default" id="hoa-rA-u9d"/>
+                                    <constraint firstItem="dCt-fW-ocE" firstAttribute="trailing" secondItem="BnD-tb-3F7" secondAttribute="trailing" type="default" id="iBr-xX-wg8"/>
+                                    <constraint firstItem="dCt-fW-ocE" firstAttribute="leading" secondItem="Ok1-S7-d52" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="oob-ww-4Go"/>
+                                    <constraint firstItem="nEy-WF-Mdx" firstAttribute="top" secondItem="ieU-jf-2MQ" secondAttribute="top" type="default" id="rx8-AK-XwX"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="action" destination="BnD-tb-3F7" id="Kkz-K8-WC6"/>
+                                    <outlet property="name" destination="dCt-fW-ocE" id="0ca-1q-qCO"/>
+                                    <outlet property="photo" destination="Ok1-S7-d52" id="aLO-7E-s7d"/>
+                                    <outlet property="time" destination="nEy-WF-Mdx" id="TEd-WN-kBi"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="yYq-rP-agJ" id="xTP-2z-MDw"/>
+                            <outlet property="delegate" destination="yYq-rP-agJ" id="Fmd-CG-XyT"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Notifications" id="DuZ-4z-bua">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="lxS-Jd-MUe">
+                            <connections>
+                                <action selector="addPlayer:" destination="yYq-rP-agJ" id="OOV-E6-J27"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4eT-5d-LCO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="915" y="36"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="RGz-Lf-2GJ">
+            <objects>
+                <navigationController id="gyI-Xf-4xs" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="4oQ-ov-uaX">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="yYq-rP-agJ" kind="relationship" relationship="rootViewController" id="eno-Nr-12A"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LsH-EZ-aGX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="389" y="36"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="GlassboxCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GlassboxCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="action" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="name" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="photo" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="time" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="GlassboxTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GlassboxTableViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="addPlayer:" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="GlassboxViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GlassboxViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="addPlayer:" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
+        <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
 </document>
